# qpizza

./: .gitignore  AGENTS.md  PITCH.md  README.md  RUNBOOK.md  pyproject.toml
backends/: __init__.py
context/: README.md  RUNNING.md  VISION.md  challenge.md  creative-fusions.md  how_to_use_lumi_q50.md  ideas.md  literature-review.md  newton-feynman.md  pressure-test.md  quantum-investor.html  resources.md  strategy.md
demo/: app.py  inference.py
paper/: bibliography.bib  main_V2.tex  main_V3.tex
quantum_investor/: README.md  classical_model.py  data.py  fit.py  main.py  plot.py  quantum_model.py  requirements.txt  test_model.py
quantum_pricer/: README.md  __init__.py  backends.py  benchmark.py  classical.py  dashboard.html  dashboard.py  data.py  demo.py  fourier.py  hamming.py  make_results.py  oracles.py  qae.py  qsvt.py  requirements.txt  run_hardware.py  sota.py  tree.py
real quantum simulated asian pricing/: README.md  paper_to_reproduce.tex  requirements.txt
results/: FIGURES.md  README.md  RESULTS.md  backtest.py  backtest_drift_compare.py  backtest_rolling.py  build_dashboard.py  build_demo.py  convergence.json  dashboard.html  demo.html  demo_animation.html  demo_output.txt  demo_template.html  export_demo_data.py  fig11_error_vs_queries.py  forecast.json  hardware.json  index.html  live_server.py  manifest.py  model_experiments.py  money.html  price_forecast.py  prices.json  qsvt_analysis.json  qsvt_analysis.py  results.json  scoreboard.py  speedup_compare.json  speedup_compare.py  style.py  test_build.py  test_build_demo.py  test_demo_animation.py  (+4 more)
(+104 files in other folders)
